--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Fun Bus Travel Agency - Solution</title>
 
   <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Roboto" rel="stylesheet">
@@ -16,9 +16,47 @@
 
 <body>
 
+  <div class="container home">
+
+
+
+
+
+<header>
+  <section class="hi">
+      <nav>
+        <span class='space'>
+        <h1>Fun Bus</h1>
+        </span>
+         <span class='space2'>
+          <a href='#'>Home</a>
+          <a href='#'>About Us</a>
+          <a href='#'>Blog</a>
+          <a href='#'>Contact</a>
+         </span>
+      </nav>
+      
+
+    <div class="topimg">
+      <img src='img/fun-bus.jpg' alt='Bus Photo'>
+    </div>
+
+
+
+
+
+
+    <div class="htext">
+      <h2>Welcome To Fun Bus!</h2>
+        <p>Adventure webdesign pretty design design, excursion cute WordPress blogger design webdesign adventure. Pretty simple traveling fun WordPress wanderlust darn simple organized.</p> 
+    </div>
+  </section>
+</header>
+
+
   
      
-  <div class="container home">
+ 
    
     <section class="content-section">
       <div class="text-content">
